# lhef-tools

./: .gitignore  LICENSE  README.md  lhef-parse.cabal  lhef-tools.cabal  lhef.cabal  shell.nix  stack.yaml
src/: TestParse.hs
src/HEP/Data/: LHEF.hs
src/HEP/Data/LHEF/: Parser.hs  PipesUtil.hs  Type.hs
test/: conduitparse.hs  parsetest.hs  pipesparse.hs  testparse.hs
