name:                lhef-parse
version:             0.1.0.0
synopsis:            Tools for the LHEF analyses
description:         This package provides simple parsers and functions for manipulating files in the Les Houches Event Form (LHEF).
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
category:            Data, Physics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HEP.Data.LHEF
                       HEP.Data.LHEF.Parser
  build-depends:       base >=4.6,
                       bytestring >=0.10,
                       containers >=0.5,
                       attoparsec >=0.11,
                       hep-vector >=0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fwarn-incomplete-patterns