name:                lhef-tools
version:             0.1.0.0
synopsis:            Tools for the LHEF analyses
description:         This package provides simple parsers and functions for manipulating files in the Les Houches Event Form (LHEF).
homepage:            https://github.com/cbpark/lhef-tools
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
category:            Data, Physics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HEP.Data.LHEF
                       HEP.Data.LHEF.Parser
  build-depends:       base >=4.6,
                       attoparsec >=0.12,
                       bytestring >=0.10,
                       containers >=0.5,
                       hep-vector >=0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields

executable testlhefparse
  main-is:             TestParse.hs
  build-depends:       base >=4.6,
                       attoparsec >=0.12,
                       bytestring >=0.10,
                       containers >=0.5,
                       hep-vector >=0.1,
                       lhef-tools
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields