name:                lhef-tools
version:             0.1.0.0
synopsis:            Tools for the LHEF analyses
description:         This package provides simple parsers and functions for manipulating files in the Les Houches Event Form (LHEF).
homepage:            https://github.com/cbpark/lhef-tools
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
copyright:           (c) 2014 Chan Beom Park
category:            Data, Physics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HEP.Data.LHEF
                       HEP.Data.LHEF.Parser
                       HEP.Data.LHEF.Type
  build-depends:       base >=4.6
                     , attoparsec >=0.12
                     , bytestring >=0.10
                     , containers >=0.5
                     , lens >=4.2
                     , transformers >=0.3 && <0.5
                     , hep-vector >=0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -fno-warn-unused-do-bind

executable lhef_parse_test
  main-is:             testparse.hs
  build-depends:       base >=4.6
                     , attoparsec >=0.12
                     , bytestring >=0.10
                     , lhef-tools
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields

executable lhef_conduitparse_test
  main-is:             conduitparse.hs
  build-depends:       base >=4.6
                     , attoparsec >=0.12
                     , conduit >=1.2
                     , conduit-extra >=1.1
                     , resourcet >=1.1
                     , transformers >=0.3 && <0.5
                     , lhef-tools
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields