name:                lhef-tools
version:             0.1.0.0
synopsis:            Tools for the LHEF analyses
description:         This package provides simple parsers and functions for manipulating files in the Les Houches Event Format (LHEF).
homepage:            http://github.com/cbpark/lhef-tools
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2014 - 2015 Chan Beom Park
category:            Data, Physics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:cbpark/lhef-tools.git

flag devel
  description:         Create small test executables
  default:             False

library
  exposed-modules:     HEP.Data.LHEF
                       HEP.Data.LHEF.Parser
                       HEP.Data.LHEF.Type
  build-depends:       base >=4.8
                     , attoparsec >=0.12
                     , bytestring >=0.10
                     , containers >=0.5
                     , pipes >=4.1
                     , pipes-attoparsec >=0.5
                     , transformers >=0.3 && <0.5
                     , hep-kinematics >=0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -fno-warn-unused-do-bind

executable lhef_parse_test
  main-is:             testparse.hs
  build-depends:       base >=4.8
                     , attoparsec >=0.12
                     , bytestring >=0.10
                     , lhef-tools
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields
  if flag(devel)
    buildable:         True
  else
    buildable:         False

executable lhef_conduitparse_test
  main-is:             conduitparse.hs
  build-depends:       base >=4.8
                     , conduit >=1.2
                     , conduit-extra >=1.1
                     , resourcet >=1.1
                     , transformers >=0.3 && <0.5
                     , lhef-tools
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields
  if flag(devel)
    buildable:         True
  else
    buildable:         False

executable lhef_pipesparse_test
  main-is:             pipesparse.hs
  build-depends:       base >=4.8
                     , pipes >=4.1
                     , pipes-bytestring >=2.1
                     , lhef-tools
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields
  if flag(devel)
    buildable:         True
  else
    buildable:         False